--- a/qwanda-service-war/pom.xml
+++ b/qwanda-service-war/pom.xml
@@ -400,8 +400,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.8.7
-            </version>
+            <version>2.11.3</version>
 
         </dependency>
         <dependency>
